--- a/Views/beach/Details.cshtml
+++ b/Views/beach/Details.cshtml
@@ -46,7 +46,8 @@
                 </table>
             </div>
             <div class="span6">
-                <img src="@Url.Content("~/Content/beachimages/beach.jpg")" class="img-polaroid" />
+                <!-- <img src="@Url.Content("~/Content/beachimages/beach.jpg")" class="img-polaroid" /> -->
+                <img src="@ViewBag.imgPath" class="img-polaroid" />
                 <div id="map" class="img-polaroid"></div>
             </div>
         </div>
