--- a/Views/beach/AAaddReview.cshtml
+++ b/Views/beach/AAaddReview.cshtml
@@ -4,15 +4,18 @@
     ViewBag.Title = "addReview";
 }
 
-<h2>Leave a comment!</h2>
+<h2>addReview</h2>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-@using (Html.BeginForm("addReview","beach")) {
+@using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>Go ahead!</legend>
+        <legend>review</legend>
+
+      
+
         <div class="editor-label">
             @Html.LabelFor(model => model.name)
         </div>
@@ -22,17 +25,27 @@
         </div>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.reviewDate)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.reviewDate)
+            @Html.ValidationMessageFor(model => model.reviewDate)
+        </div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => model.text)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.text)
             @Html.ValidationMessageFor(model => model.text)
         </div>
-        <div class="editor-field">
-            @Html.HiddenFor(model => model.beachId)
-        </div>
+
         <p>
-            <input type="submit" value="Create" class="btn btn-success" />
+            <input type="submit" value="Create" />
         </p>
     </fieldset>
 }
+
+<div>
+    @Html.ActionLink("Back to List", "Index","Home")
+</div>
