--- a/Views/beach/Details.cshtml
+++ b/Views/beach/Details.cshtml
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="span6">
-                <p>In order to sumbmit new reviews for the beach please @Html.ActionLink("Click here!", "addReview", "beach", new { beachId = @ViewBag.beach.beachId }, new { @class = "btn btn-primary" })</p>
+                <p>In order to sumbmit new reviews for the beach please @Html.ActionLink("Click here!", "addReview", "beach", new { beachId = @ViewBag.beach.beachId }, new { @class = "btn btn-primary", @id = "reviewbtn" })</p>
                 <div class="btn-group">
                   <button id="click" class="btn ratebtn" rate="1">1</button>
                   <button class="btn ratebtn" rate="2">2</button>
@@ -48,13 +48,18 @@
             <div class="span6">
                 <!-- <img src="@Url.Content("~/Content/beachimages/beach.jpg")" class="img-polaroid" /> -->
                 <img src="@ViewBag.imgPath" class="img-polaroid" />
+                <hr />
                 <div id="map" class="img-polaroid"></div>
             </div>
+        </div>
+        <hr />
+        <div class="row well" id="review">
+            @Html.Partial("~/Views/beach/addReview.cshtml", new beachmaster.Models.review { beachId = @ViewBag.beach.beachId });
         </div>
     </div>
 </div>
 <script type="text/javascript">
-    $(".ratebtn").click(function () {
+            $(".ratebtn").click(function () {
                 $.ajax({
                     type: "POST",
                     url: "/beach/submitRate/",
@@ -70,13 +75,14 @@
                 });
             });
 
-      var url = GMaps.staticMapURL({
-        //size: [610, 350],
-        lat: @ViewBag.beach.latitude,
-        lng: @ViewBag.beach.longitude,
-        markers: [
-          {lat: @ViewBag.beach.latitude, lng: @ViewBag.beach.longitude}
-        ]
-      });
-      $('<img/>').attr('src', url).appendTo('#map');
+        var url = GMaps.staticMapURL({
+            //size: [610, 350],
+            lat: @ViewBag.beach.latitude,
+            lng: @ViewBag.beach.longitude,
+            markers: [
+                {lat: @ViewBag.beach.latitude, lng: @ViewBag.beach.longitude}
+            ]
+        });
+
+        $('<img/>').attr('src', url).appendTo('#map');
 </script>
